# SpaceInvaders

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Readme.md  run.sh  travis.yml
doc/: notes  references.dox  references.md  report.tex
levels/: boss.json  bullet.json  enemy.json  levels.json  lvl0.json  lvl1.json  lvl2.json  lvl3.json  lvl4.json  lvl5.json  player.json
levels/extra/: enemyBullet.json
report/: report.tex
src/: Clock.cpp  Clock.h  Event.cpp  Event.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Stopwatch.cpp  Stopwatch.h  main.cpp
src/EntityController/: ControllerEvent.cpp  ControllerEvent.h  EnemiesController.cpp  EnemiesController.h  EnemyController.cpp  EnemyController.h  EntityController.cpp  EntityController.h  GameController.cpp  GameController.h  PlayerController.cpp  PlayerController.h  ShipController.cpp  ShipController.h  WindowCloseListener.cpp  WindowCloseListener.h
src/EntityModel/: Coordinate.cpp  Coordinate.h  Dimensions.cpp  Dimensions.h  EnemyShip.cpp  EnemyShip.h  EntityModel.cpp  EntityModel.h  GameModel.cpp  GameModel.h  ModelChangedEvent.cpp  ModelChangedEvent.h  MovingEntity.cpp  MovingEntity.h  PlayerShip.cpp  PlayerShip.h  RocketModel.cpp  RocketModel.h  Ship.cpp  Ship.h  WorldModel.cpp  WorldModel.h
src/EntityRepresentation/: BGTile.cpp  BGTile.h  BackgroundTiles.cpp  BackgroundTiles.h  EntityRepresentation.cpp  EntityRepresentation.h  GameRepresentation.cpp  GameRepresentation.h  MovingEntityRepresentation.cpp  MovingEntityRepresentation.h  ShipRepresentation.cpp  ShipRepresentation.h  Transformation.cpp  (+3 more)
(+69 files in other folders)
